--- a/businessLearning.css
+++ b/businessLearning.css
@@ -157,7 +157,7 @@
     border-radius: 10px;
 }
 
-.social-icon {
+.business-social-icon {
     width: 40px;
     height: 40px;
     background-color: #f0f4f9;
